BuildHughes/translation-tool/inputs/source_meta/objects/UpdateAccountSync__e.object
<CustomObject>
    <fields>
        <fullName>CaseNumber__c</fullName>
        <label>CaseNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <label>ContactId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Account_Id__c</fullName>
        <label>Location Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>UpdateAccountSync</label>
    <pluralLabel>UpdateAccountSync</pluralLabel>
</CustomObject>